# us_foreign_policy_interests

./: README.md  index.html  narrative.md  notebook.ipynb  pyproject.toml
output/: dtm_series_data.json  tfidf_data.json  top5_words_per_year.csv
