[project]
name = "text-mining-workflow-cfr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "en-core-web-sm",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "selenium>=4.40.0",
    "setuptools>=82.0.0",
    "spacy>=3.8.11",
    "undetected-chromedriver>=3.5.5",
    "webdriver-manager>=4.0.2",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
